<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">wearemania</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main_activity1">wearemania</string>
    <string name="title_activity_main_activity2">berita arema</string>
    <string name="title_activity_main_activity3">profil arema</string>
    <string name="nick_kalmar">Wearemania.net - Rasa optimis dilambungkan Nick Kalmar menyambut laga pemungkas ISC A 2016 menjamu Persib Bandung, Minggu (18/12) malam. Gelandang jangkar Arema itu yakin mampu melesakkan gol keduanya musim ini.

Seperti diketahui, sejak bergabung dengan Arema di paruh musim ini, Kalmar baru sekali mencetak gol. Jala gawang Sriwijaya FC dirobeknya di pekan ke-32 lalu.

"Saya akan mencetak gol kedua. Rasanya luar biasa bisa mencetak gol di hadapan suporter. Saya berharap bisa mencetak gol lagi," ungkap pemain asal Australia ini, seperti dilansir Surya Malang.

Kalmar mengaku ketagihan mencetak gol di hadapan publik Stadion Kanjuruhan Malang. Pemilik jersey nomor 32 itu tertarik ingin mengulang sensasi mendengarkan teriakan gembira Aremania di tribun menyambut golnya waktu itu.

"Pertandingan terakhir selalu jadi pertandingan penuh semangat. Saya akan berusaha mencetak gol. Tetapi yang terpenting, Arema harus menang di laga terakhir," pungkasnya.</string>
		
<string name="tim">Wearemania.net - Manajemen Arema menegaskan tim saat ini fokus mempertahankan hadiah runner-up ISC A 2016 sebesar dua miliar yang sudah ada di depan mata. Namun demikian, mereka tetap tak menyerah mengejar hadiah yang nominalnya lebih besar, yakni juara sejumlah tiga miliar.

Kalau skuat Singo Edan mampu memenangkan laga di pekan terakhir melawan Persib Bandung (18/12), setidaknya hadiah runner-up sudah di genggaman. Syukur-syukur di laga lain, PSM Makassar berhasil menaklukkan sang pemuncak klasemen sementara, Persipura Jayapura, sehingga Arema yang berhak atas hadiah pertamanya.

"Bagaimanapun kami harus mengamankan dulu apa yang sudah didapatkan, yaitu posisi runner-up, kami akan tetap berusaha, kalau memang takdirnya juara ya Arema juara," ungkap General Manager Arema, Ruddy Widodo.

Langkah pertama yang harus dilakukan penggawa Singo Edan tentu harus mengalahkan Persib, tanpa melihat dulu hasil antara Persipura vs PSM. Sebab, hasil imbang, atau bahkan kekalahan, dipastikan bakal menjungkalkan Arema ke peringkat tiga jika Madura United mampu menang di kandang Barito Putera.

"Mental tim harus benar-benar dijaga, terutama di pertandingan krusial sepert ini, setidaknya kemenangan atas Persib tak akan membuat kami kehilangan hadiah dua atau tiga miliar," pungkasnya.</string>
		
<string name="aremania">Wearemania.net - Panpel Arema optimis Stadion Kanjuruhan bakal penuh oleh Aremania di laga kandang terakhir ISC A 2016 menjamu Persib Bandung, Minggu (18/12) malam. Hal itu tampak dari tiket yang sudah sold out sejak H-5 sebelum kick-off.

Indikasi itu sebenarnya sudah tercium sejak laga kandang sebelumnya ketika Arema menang 3-2 atas Sriwijaya FC (8/12). Kala itu, tribun stadion hanya terisi 8.000-an suporter saja.

"Kalau melihat track recordnya, biasanya lawan SFC itu stadion penuh, tapi ini hanya 8000-an saja, mungkin laga kandang selanjutnya lawan Persib lebih jadi pilihan Aremania," ujar Ketua Panpel Arema, Abdul Haris.

Terlebih, sebelum lawan SFC, Aremania banyak yang melakoni tur ke kandang Bali United. Menurut Haris, Aremania banyak yang menyimpan uangnya untuk membeli tiket lawan Persib.

"Saat ini Aremania dari luar Malang juga sudah konfirmasi akan datang ke Kanjuruhan, dari Jakarta ada 400-an, Bali 300-an, Banyuwangi 150-an, lalu dari Tegal, Madiun, dan kota-kota lainnya, maka kami prediksi suporter akan membludak," pungkasnya.</string>


<string name="atraksi">Wearemania.net - Kreativitas Aremania sebagai suporter sepakbola memang tak pernah ada habisnya. Terbukti, mereka menyiapkan atraksi untuk laga pemungkas Arema di ISC A 2016 menjamu Persib Bandung, Minggu (18/12) malam.
</string>


<string name="milo">Wearemania.net - Peluang Arema menjuarai ISC A 2015 ini memang sangat tipis. Namun, sang pelatih, Milomir Seslija tetap ingin memburu happy ending di masa akhir kontraknya di skuat Singo Edan.

Jika pria asal Bosnia itu tetap ingin mempersembahkan gelar juara, maka Arema wajib mengalahkan Persib Bandung di pekan terakhir. Demi misi ini, penggawa Singo Edan diinstruksikannya untuk main habis-habisan di hadapan publik Stadion Kanjuruhan Malang.

"Kami tahu, Persib akan bermain tanpa beban, saya berharap anak-anak juga demikian, mereka harus menunjukkan karakternya, seperti beberapa pertandingan terakhir," ungkap pelatih yang biasa disapa Milo itu.

Tak cukup menang atas Maung Bandung, menurutnya Arema juga butuh sebuah keberuntungan. Pasalnya, selain tambahan tiga poin, Hamka Hamzah dkk juga harus berharap di laga lainnya, PSM Makassar mampu mengalahkan Persipura Jayapura di Stadion Mandala.

"Kami ingin menyelesaikan kompetisi ini dengan akhir yang manis, bagi saya tak ada yang tak mungkin dalam sepak bola," ungkap pelatih berlisensi UEFA Pro tersebut. </string>

    
<string name="profil">Arema Indonesia (dahulu, Arema FC dan Arema Malang) adalah sebuah klub sepak bola yang bermarkas di Malang, Jawa Timur, Indonesia. Arema didirikan pada tanggal 11 Agustus 1987, Arema mempunyai julukan "Singo Edan" . Mereka bermain di Stadion Kanjuruhan dan Stadion Gajayana. Arema adalah tim sekota dari Persema Malang. Di musim 2010-11, di acara launching sempat menggunakan nama Arema FC, namun dua hari kemudian kembali lagi ke nama Arema Indonesia.

Sejak hadir di persepak bolaan nasional, Arema telah menjadi ikon dari warga Malang Raya (Kota Malang, Kabupaten Malang, Kota Batu) dan sekitarnya. Sebagai perwujudan dari simbol Arema, hampir di setiap sudut kota hingga gang-gang kecil terdapat patung dan gambar singa. Kelompok suporter mereka dipanggil Aremania dan Aremanita (untuk pendukung wanita) 

</string>

<string name="prestasi">
Prestasi

Piala Galatama
* Runner up (1): 1992

Galatama
* Juara (1): 1992/93

Divisi Satu
* Juara (1): 2004

Piala Indonesia
* Juara (2): 2005, 2006
* Runner up (1): 2010
Liga Super Indonesia
* Juara (1): 2009/2010

Piala Gubernur
* Runner up (1): 2008

Piala Soeratin U-18
* Juara (1): 2007

Penghargaan

* Tabloid Bola Best Team Award (2): 2006, 2007
</string>


    <string name="title_activity_login">MainActivity</string>
    <string name="title_activity_data_base_helper">DataBaseHelper</string>
    <string name="title_activity_signup">MainActivity</string>

</resources>